--- a/src/PrestaShopBundle/Resources/config/services/adapter/currency.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/currency.yml
@@ -108,5 +108,4 @@ services:
     tags:
       - { name: 'tactician.handler', command: 'PrestaShop\PrestaShop\Core\Domain\Currency\Query\GetReferenceCurrency' }
 
-  prestashop.adapter.currency.repository.currency_repository:
-    class: 'PrestaShop\PrestaShop\Adapter\Currency\Repository\CurrencyRepository'
+  PrestaShop\PrestaShop\Adapter\Currency\Repository\CurrencyRepository: ~
