--- a/src/PrestaShopBundle/Resources/config/services/core/hook.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/hook.yml
@@ -2,10 +2,14 @@ services:
   _defaults:
     public: true
 
-  prestashop.core.hook.dispatcher:
-    class: 'PrestaShop\PrestaShop\Core\Hook\HookDispatcher'
+  PrestaShop\PrestaShop\Core\Hook\HookDispatcher:
     arguments:
       - '@prestashop.hook.dispatcher'
+
+  PrestaShop\PrestaShop\Core\Hook\HookDispatcherInterface: '@PrestaShop\PrestaShop\Core\Hook\HookDispatcher'
+
+  prestashop.core.hook.dispatcher:
+    alias: 'PrestaShop\PrestaShop\Core\Hook\HookDispatcher'
 
   prestashop.core.hook.provider.grid_definition_hook_by_service_ids_provider:
     class: PrestaShop\PrestaShop\Core\Hook\Provider\GridDefinitionHookByServiceIdsProvider
