--- a/src/PrestaShopBundle/Resources/config/services/adapter/common.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/common.yml
@@ -11,11 +11,13 @@ services:
   prestashop.adapter.tools:
     class: PrestaShop\PrestaShop\Adapter\Tools
 
-  prestashop.adapter.legacy.context:
-    class: PrestaShop\PrestaShop\Adapter\LegacyContext
+  PrestaShop\PrestaShop\Adapter\LegacyContext:
     arguments:
       - "%mail_themes_uri%"
       - '@prestashop.adapter.tools'
+
+  prestashop.adapter.legacy.context:
+    alias: PrestaShop\PrestaShop\Adapter\LegacyContext
 
   prestashop.adapter.environment:
     class: PrestaShop\PrestaShop\Adapter\Environment
