--- a/src/PrestaShopBundle/Resources/config/services/adapter/image.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/image.yml
@@ -31,13 +31,15 @@ services:
   prestashop.adapter.image.uploader.supplier_image_uploader:
     class: 'PrestaShop\PrestaShop\Adapter\Image\Uploader\SupplierImageUploader'
 
-  prestashop.adapter.image.image_generator:
-    class: 'PrestaShop\PrestaShop\Adapter\Image\ImageGenerator'
+  PrestaShop\PrestaShop\Adapter\Image\ImageGenerator: ~
 
-  prestashop.adapter.image.image_validator:
-    class: 'PrestaShop\PrestaShop\Adapter\Image\ImageValidator'
+  PrestaShop\PrestaShop\Adapter\Image\ImageValidator:
     arguments:
       - '@=service("prestashop.core.configuration.upload_size_configuration").getMaxUploadSizeInBytes()'
+
+  prestashop.adapter.image.image_validator:
+    alias: PrestaShop\PrestaShop\Adapter\Image\ImageValidator
+    deprecated: ~
 
   prestashop.adapter.image.category_image_path_factory:
     class: 'PrestaShop\PrestaShop\Adapter\Image\ImagePathFactory'
