--- a/src/PrestaShopBundle/Resources/config/services/adapter/shop.yml
+++ b/src/PrestaShopBundle/Resources/config/services/adapter/shop.yml
@@ -76,8 +76,7 @@ services:
       - "@=service('prestashop.adapter.legacy.context').getContext().link"
       - 'img/c'
 
-  prestashop.adapter.shop.repository.shop_group_repository:
-    class: 'PrestaShop\PrestaShop\Adapter\Shop\Repository\ShopGroupRepository'
+  PrestaShop\PrestaShop\Adapter\Shop\Repository\ShopGroupRepository:
     arguments:
       - '@doctrine.dbal.default_connection'
       - '%database_prefix%'
@@ -86,5 +85,3 @@ services:
     arguments:
       - '@doctrine.dbal.default_connection'
       - '%database_prefix%'
-
-  prestashop.adapter.shop.repository.shop_repository: '@PrestaShop\PrestaShop\Adapter\Shop\Repository\ShopRepository'
