--- a/src/PrestaShopBundle/Resources/config/services/core/grid/doctrine_query_builder.yml
+++ b/src/PrestaShopBundle/Resources/config/services/core/grid/doctrine_query_builder.yml
@@ -33,7 +33,7 @@ services:
       - "@=service('prestashop.adapter.legacy.context').getContext().language.id"
       - '@prestashop.core.grid.query.filter.doctrine_filter_applicator'
       - '@prestashop.adapter.legacy.configuration'
-      - '@prestashop.adapter.shop.repository.shop_group_repository'
+      - '@PrestaShop\PrestaShop\Adapter\Shop\Repository\ShopGroupRepository'
       - '@prestashop.adapter.shop.context'
     public: true
 
